# Triangle

./: .gitignore  CMakeLists.txt  _clang-format
examples/triangle-cli/: #util.c#  main.c  util.c  util.h
examples/triangle-test/: main.c  tests.c  tests.h  util.c  util.h
include/Triangle/: acute.h  acute_internal.h  api.h  checks.h  config.h  core.h  eps_writer.h  io.h  predicates.h
src/: CMakeLists.txt
src/api/: api.c  checks.c
src/core/: acute.c  core.c  eps_writer.c  io.c  predicates.c
